@@ -2,6 +2,7 @@ import java.security.InvalidKeyException;
 import java.security.KeyPair;
 import java.security.KeyPairGenerator;
 import java.security.PrivateKey;
+import java.security.PublicKey;
 import java.security.NoSuchAlgorithmException;
 import java.security.Signature;
 import java.security.SignatureException;
@@ -11,8 +12,8 @@ import java.nio.charset.StandardCharsets;
 import java.io.UnsupportedEncodingException;
 import java.math.BigInteger;
 
+import java.util.Base64;
 
-import sun.misc.BASE64Encoder;
 
 public class CryptoUtil {
      private static String getHash(String message) throws NoSuchAlgorithmException {
@@ -24,23 +25,22 @@ public class CryptoUtil {
        return String.format("%064x", new BigInteger(1, digest));
      }   
 
-     private static String getSignature(String message, PrivateKey key) throws NoSuchAlgorithmException, UnsupportedEncodingException, SignatureException, InvalidKeyException {
-       Signature sig = Signature.getInstance("SHA1WithRSA");
-       sig.initSign(key);
-       sig.update(message.getBytes("UTF-8"));
-       byte[] signatureBytes = sig.sign();
-       return new BASE64Encoder().encode(signatureBytes);
-     }
-/*
-      private static boolean verifySignature(String message, PublicKey key) throws NoSuchAlgorithmException, UnsupportedEncodingException,                SignatureException, InvalidKeyException {
-          Signature sig = Signature.getInstance("SHA1WithRSA");
+      public static String getSignature(String message, PrivateKey key) throws NoSuchAlgorithmException, UnsupportedEncodingException, SignatureException, InvalidKeyException {
+        Signature sig = Signature.getInstance("SHA1WithRSA");
+        sig.initSign(key);
+        sig.update(message.getBytes("UTF-8"));
+        byte[] signatureBytes = sig.sign();
+        return Base64.getEncoder().encodeToString(signatureBytes);
+      }  
+      public static boolean verifySignature(String message, String sign, PublicKey key) throws NoSuchAlgorithmException, UnsupportedEncodingException, SignatureException, InvalidKeyException {
+        Signature sig = Signature.getInstance("SHA1WithRSA");
         sig.initVerify(key);
         sig.update(message.getBytes("UTF-8"));
-        return sig.verify(message.getBytes("UTF-8"));
-      } */
-     
+        return sig.verify(Base64.getDecoder().decode(sign));
+      }  
+
     // Test method, refactor it later.
-    public static void main(String[] args) throws Exception {
+    public static void test(String[] args) throws Exception {
 
         KeyPairGenerator kpg = KeyPairGenerator.getInstance("RSA");
         kpg.initialize(1024);
@@ -52,5 +52,7 @@ public class CryptoUtil {
 
         String data = getSignature("test", kp.getPrivate());
         System.out.println(data);
+
+        System.out.println(verifySignature("test", data,kp.getPublic()));
     }
 }
